Fix panel overlap
Fix chat input focus clear text
Fix inspector click
Renamed frozen belt to sapphire belt

--- a/client/css/main.css
+++ b/client/css/main.css
@@ -184,6 +184,7 @@ footer, header, hgroup, menu, nav, section {
       margin-left: 0px;
       padding: 4px;
       display: none;
+      pointer-events: none;
       /* border-radius: 0 0 6px 0; */
     }
     #inspector .details {
